@startuml 08_feedback_control_method

title ErrorPropagator - Hierarchy (was FeedbackControlMethod)

note as N0
  RENAMED from FeedbackControlMethod to ErrorPropagator.
  Lives in src/stochastic/error_propagator.py. Every subclass
  shares a uniform __init__(problem_def) signature so
  StochasticTOP.__init__ can dispatch via a single
  {name: cls} dict lookup instead of an if/elif chain - each
  subclass builds whatever internal state it needs (e.g.
  EstimatedStateCovPropagator's MeasurementModel) from
  problem_def alone, with nothing threaded in from outside.

  All methods operate on the flat sol_data dict, not typed
  pytrees - see 01_data_structures.puml.
end note

abstract class ErrorPropagator {
  +__init__(problem_def)
  +init_error_state(problem_def) : array
  +propagate_cov(problem_def, sol_data) : dict
  +terminal_constraint_value(problem_def, sol_data) : array
  +stochastic_control_term(problem_def, sol_data) : array
}

class TrueStateCovPropagator {
  +{static} subarc_cov_step(A_j, B_j, K_arc, P_u_arc, P0_arc, P_j, tau_j, gam_j)
}

class TrueStateSqrtCovPropagator {
  +{static} subarc_sqrt_step(A_j, B_j, K_arc, Saug_j)
}

class EstimatedStateCovPropagator {
  -_meas : MeasurementModel
  +{static} subarc_ekf_step(A_j, B_j, K_arc, P_u_arc, Paug0_arc, H_j1, P_v_j1, Paug_j, tau_j, gam_j, update)
}

ErrorPropagator <|-- TrueStateCovPropagator
ErrorPropagator <|-- TrueStateSqrtCovPropagator
ErrorPropagator <|-- EstimatedStateCovPropagator

note right of TrueStateCovPropagator
  init_error_state returns Phat_0 (7x7) directly - that IS the
  internal covariance state.

  propagate_cov's arc/subarc loop calls the static
  subarc_cov_step (the tau/gam cross-correlation recursion,
  ported from the legacy TrueStateFeedback_CovPropagators
  subArc iterator) and writes sol_data['P_hst'],
  sol_data['P_U_arc_hst'].

  subarc_cov_step is a standalone @staticmethod with no loop
  structure or instance state baked in - reusable verbatim at
  other granularities (detailed-trajectory replay in
  src/postprocess/detailed_trajectory.py, and the true-state
  Monte Carlo runner in src/stochastic/mc_runner.py, both call
  it directly rather than duplicating the recursion).
end note

note right of TrueStateSqrtCovPropagator
  Square-root form: propagates a 3-block augmented sqrt factor
  Saug = [x_j; x0_arc; w_arc] with the frozen-per-arc (ZOH)
  process+execution noise folded in as its own block, avoiding
  the squaring round-trip a raw-covariance form needs.
  Retriangularized via QR once per arc boundary. Writes
  sol_data['Saug_hst'], sol_data['KS_arc_hst'].

  Optimizes the same variables as TrueStateCovPropagator (same
  U_arc_hst/X0/Xf/alpha/beta/gain_weights), so legacy-format
  post-processing built for the raw form applies unchanged.
end note

note right of EstimatedStateCovPropagator
  init_error_state returns the 14x14 augmented
  [[Phat_0, 0], [0, Ptild_0]] block.

  Builds its own MeasurementModel in __init__ (no
  "augment_error_dynamics" step exists anymore - H_hst/P_v_hst
  are computed inline inside propagate_cov, per-arc, via
  jax.vmap(self._meas.H_vmap)(X_hst)).

  propagate_cov's subarc_ekf_step implements the 14x14
  augmented EKF recursion (A_aug/B_aug/C_aug blocks, Joseph-
  form measurement update with p_test=5/6 underweighting via
  smooth_val2val), gated by an `update` flag (1.0 = update
  every subarc - the optimization default; 0.0 = pure time-
  propagation, used by the per-trial Monte Carlo EKF's
  finer-grained micro-steps). Writes sol_data['Paug_hst'],
  sol_data['P_U_arc_hst'], sol_data['L_arc_hst'] (Kalman gains,
  kept for plotting/MC-trial reuse), sol_data['H_hst'],
  sol_data['P_v_hst'].

  terminal_constraint_value derives, from Paug_hst[-1,-1]:
    P_Xf_full = Phat - Phattild - Phattild.T + Ptild
  (rows only - the augmented block isn't triangular) - same
  formula every ErrorPropagator subclass's terminal constraint
  reduces to, just derived from a different internal
  representation.
end note

note bottom of ErrorPropagator
  Because propagate_cov()/terminal_constraint_value()/
  stochastic_control_term() are called identically regardless
  of subclass (StochasticTOP never branches on feedback type
  after __init__), CovarianceConstraint and ControlNormConstraint
  (src/optimization/constraints.py) just forward sol_data to
  whichever instance StochasticTOP built - no reference back to
  "which controller" beyond that one stored instance.
end note

@enduml
